versioned_docs/version-4.0.x/reference/functions/Uninstall-ADTApplication.mdx
---
id: Uninstall-ADTApplication
title: Uninstall-ADTApplication
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Removes one or more applications specified by name, filter script, or InstalledApplication object from Get-ADTApplication.

## SYNTAX

### InstalledApplication

```powershell
Uninstall-ADTApplication -InstalledApplication <InstalledApplication[]> [-ArgumentList <String>]
 [-AdditionalArgumentList <String>] [-SecureArgumentList] [-LoggingOptions <String>] [-LogFileName <String>]
 [-PassThru] [<CommonParameters>]
```

### Search

```powershell
Uninstall-ADTApplication [-Name <String[]>] [-NameMatch <String>] [-ProductCode <Guid[]>]
 [-ApplicationType <String>] [-IncludeUpdatesAndHotfixes] [[-FilterScript] <ScriptBlock>]
 [-ArgumentList <String>] [-AdditionalArgumentList <String>] [-SecureArgumentList] [-LoggingOptions <String>]
 [-LogFileName <String>] [-PassThru] [<CommonParameters>]
```

## DESCRIPTION

Removes one or more applications specified by name, filter script, or InstalledApplication object from Get-ADTApplication.

Enumerates the registry for installed applications via Get-ADTApplication, matching the specified application name and uninstalls that application using its uninstall string, with the ability to specify additional uninstall parameters also.

## EXAMPLES

### EXAMPLE 1

```powershell
Uninstall-ADTApplication -Name 'Acrobat' -ApplicationType 'MSI' -FilterScript { $_.Publisher -match 'Adobe' }
```

Removes all MSI applications that contain the name 'Acrobat' in the DisplayName and 'Adobe' in the Publisher name.

### EXAMPLE 2

```powershell
Uninstall-ADTApplication -Name 'Java' -FilterScript {$_.Publisher -eq 'Oracle Corporation' -and $_.Is64BitApplication -eq $true -and $_.DisplayVersion -notlike '8.*'}
```

Removes all MSI applications that contain the name 'Java' in the DisplayName, with Publisher as 'Oracle Corporation', are 64-bit, and not version 8.x.

### EXAMPLE 3

```powershell
Uninstall-ADTApplication -FilterScript {$_.DisplayName -match '^Vim\s'} -Verbose -ApplicationType EXE -ArgumentList '/S'
```

Remove all EXE applications starting with the name 'Vim' followed by a space, using the '/S' parameter.

## PARAMETERS

### -InstalledApplication

Specifies the [PSADT.Types.InstalledApplication] object to remove.
This parameter is typically used when piping Get-ADTApplication to this function.

```yaml
Type: InstalledApplication[]
Parameter Sets: InstalledApplication
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -Name

The name of the application to retrieve information for.
Performs a contains match on the application display name by default.

```yaml
Type: String[]
Parameter Sets: Search
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -NameMatch

Specifies the type of match to perform on the application name.
Valid values are 'Contains', 'Exact', 'Wildcard', and 'Regex'.
The default value is 'Contains'.

```yaml
Type: String
Parameter Sets: Search
Aliases:

Required: False
Position: Named
Default value: Contains
Accept pipeline input: False
Accept wildcard characters: False
```

### -ProductCode

The product code of the application to retrieve information for.

```yaml
Type: Guid[]
Parameter Sets: Search
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ApplicationType

Specifies the type of application to remove.
Valid values are 'All', 'MSI', and 'EXE'.
The default value is 'All'.

```yaml
Type: String
Parameter Sets: Search
Aliases:

Required: False
Position: Named
Default value: All
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeUpdatesAndHotfixes

Include matches against updates and hotfixes in results.

```yaml
Type: SwitchParameter
Parameter Sets: Search
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -FilterScript

A script used to filter the results as they're processed.

```yaml
Type: ScriptBlock
Parameter Sets: Search
Aliases:

Required: False
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ArgumentList

Overrides the default MSI parameters specified in the config.psd1 file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AdditionalArgumentList

Adds to the default parameters specified in the config.psd1 file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SecureArgumentList

Hides all parameters passed to the executable from the Toolkit log file.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -LoggingOptions

Overrides the default MSI logging options specified in the config.psd1 file.
Default options are: "/L*v".

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -LogFileName

Overrides the default log file name for MSI applications.
The default log file name is generated from the MSI file name.
If LogFileName does not end in .log, it will be automatically appended.

For uninstallations, by default the product code is resolved to the DisplayName and version of the application.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru

Returns a PSADT.Types.ProcessResult object, providing the ExitCode, StdOut, and StdErr output from the uninstallation.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### PSADT.Types.InstalledApplication

### This function can receive one or more InstalledApplication objects for uninstallation.
## OUTPUTS

### PSADT.Types.ProcessResult

### Returns an object with the results of the installation if -PassThru is specified.
### - ExitCode
### - StdOut
### - StdErr
## NOTES
An active ADT session is NOT required to use this function.

More reading on how to create filterscripts https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.core/where-object?view=powershell-5.1#description

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Uninstall-ADTApplication](./Uninstall-ADTApplication.mdx)
